[OfflinePages] Call NotifyInterrupted for pending requests

BUG=668231

Review-Url: https://codereview.chromium.org/2521353005
Cr-Commit-Position: refs/heads/master@{#435154}

Former-commit-id: 59651690714d5c1b475d60a796ca11db423038cd