components/offline_pages/downloads/download_ui_item.cc
@@ -19,16 +19,13 @@ DownloadUIItem::DownloadUIItem(const OfflinePageItem& page)
       title(page.title),
       target_path(page.file_path),
       start_time(page.creation_time),
-      total_bytes(page.file_size),
-      is_offlining(false) {}
+      total_bytes(page.file_size) {}
 
 DownloadUIItem::DownloadUIItem(const SavePageRequest& request)
     : guid(request.client_id().id),
       url(request.url()),
       start_time(request.creation_time()),
-      total_bytes(-1L),
-      is_offlining(request.request_state() ==
-          SavePageRequest::RequestState::OFFLINING) {}
+      total_bytes(-1L) {}
 
 DownloadUIItem::DownloadUIItem(const DownloadUIItem& other)
     : guid(other.guid),
@@ -36,8 +33,7 @@ DownloadUIItem::DownloadUIItem(const DownloadUIItem& other)
       title(other.title),
       target_path(other.target_path),
       start_time(other.start_time),
-      total_bytes(other.total_bytes),
-      is_offlining(other.is_offlining) {}
+      total_bytes(other.total_bytes) {}
 
 DownloadUIItem::~DownloadUIItem() {
 }
